--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -12,6 +12,18 @@ spring:
       pool-name: DatebookHikariCP
       max-lifetime: 1800000
       connection-timeout: 30000
+  mail:
+    host: smtp.qq.com
+    port: 587
+    username: 3521167562@qq.com
+    password: rnybqkoiyaxldagc
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 
 
 mybatis-plus:
